<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mollie.musicalstructure.DetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="now playing/more info"
        android:textSize="34sp" />

    <TextView
        style="@style/PageDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_page_description" />

    <TextView
        style="@style/PageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_one_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/book_one_author"
        android:textSize="20sp"
        android:textStyle="italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:text="@string/about"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:text="@string/book_description" />

    <Button
        android:id="@+id/back_to_library_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_library" />


</LinearLayout>
